<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:padding="8dp"
    android:id="@+id/detailuser">

    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tldetailprofil"></com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/vpdetailprofil"
        android:layout_below="@+id/tldetailprofil"
        ></androidx.viewpager.widget.ViewPager>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivImagedetail"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:id="@+id/detail"
        android:layout_width="wrap_content"
        android:layout_height="450dp"
        android:layout_marginStart="10dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:paddingStart="16dp">


        <TextView
            android:id="@+id/tvUsername"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="0.5"
            android:text="@string/username" />

        <TextView
            android:id="@+id/tvName"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="0.5"
            android:text="@string/name" />

        <TextView
            android:id="@+id/tvCompany"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="0.5"
            android:text="@string/company" />

        <TextView
            android:id="@+id/tvLocation"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="0.5"
            android:text="@string/location" />

        <TextView
            android:id="@+id/tvRepo"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="0.5"
            android:text="@string/repo" />

        <TextView
            android:id="@+id/tvFollower"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="0.5"
            android:text="@string/follower" />

        <TextView
            android:id="@+id/tvFollowing"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="0.5"
            android:text="@string/following" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/showdetail"
        android:layout_width="wrap_content"
        android:layout_height="450dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"

        android:layout_marginBottom="20dp"
        android:layout_toRightOf="@+id/detail"
        android:orientation="vertical"
        android:paddingStart="16dp">

        <TextView
            android:id="@+id/Username"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="0.5"
            android:text="@string/username" />


        <TextView
            android:id="@+id/Name"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="0.5"
            android:text="@string/name" />

        <TextView
            android:id="@+id/Company"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="0.5"
            android:text="@string/company" />

        <TextView
            android:id="@+id/Location"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="0.5"
            android:text="@string/location" />

        <TextView
            android:id="@+id/Repo"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="0.5"
            android:text="@string/repo" />

        <TextView
            android:id="@+id/Follower"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="0.5"
            android:text="@string/follower" />

        <TextView
            android:id="@+id/Following"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="0.5"
            android:text="@string/following" />

    </LinearLayout>


</RelativeLayout>